<resources>
    <string name="app_name">CollaborationProject</string>
    <string name="st_mary">台東聖母醫院</string>

    <string name="manual_input">手動輸入</string>
    <string name="add">新增</string>
    <string name="upload">上傳</string>

    <string name="temperature">體溫</string>
    <string name="unit_celsius">℃</string>

    <string name="respire">呼吸</string>
    <string name="unit_respire">次/分鐘</string>

    <string name="blood_pressure">血壓</string>
    <string name="systolic">收縮壓</string>
    <string name="diastolic">舒張壓</string>
    <string name="systolic_diastolic">收縮壓/舒張壓</string>
    <string name="unit_blood_pressure">毫米汞柱</string>
    <string name="blood_pressure_des">脈壓差過大/過小</string>
    <string name="blood_pressure_des1">脈壓差正常</string>

    <string name="pulse">脈搏</string>
    <string name="unit_pulse">次/分鐘</string>

    <string name="weight">體重</string>
    <string name="unit_weight">公斤</string>

    <string name="blood_glucose">血糖</string>
    <string name="unit_blood_glucose">毫克/分升</string>
    <string name="meal">餐別</string>
    <string name="fasting">空腹</string>
    <string name="before_meal">餐前</string>
    <string name="after_meal">餐後</string>

    <string name="oxygen">血氧</string>
    <string name="oxygen_saturation">血氧飽和度</string>
    <string name="percentage">％</string>
    <string name="view_spo2_chart_label_100_95_pct" translatable="false">"100–95%"</string>
    <string name="view_spo2_chart_label_94_90_pct" translatable="false">"94–90%"</string>
    <string name="view_spo2_chart_label_89_or_less">89％以下</string>

    <string name="height">身高</string>
    <string name="unit_height">公分</string>

    <string name="month">月</string>
    <string name="week">週</string>
    <string name="day">天</string>

    <string name="menu_case_list">我的照顧清單</string>
    <string name="menu_unupload_data">未上傳資料</string>
    <string name="menu_measurement_device">量測設備</string>
    <string name="menu_about">關於</string>

    <string name="sys_daily_nursing">居家護理</string>
    <string name="sys_daily_care">日照中心</string>
    <string name="sys_station">健康活力站</string>
    <string name="sys_home_service">居家服務</string>

    <string name="login_nursing">照護者登入</string>
    <string name="login_account">帳號</string>
    <string name="login_password">密碼</string>
    <string name="login">登入</string>
    <string name="login_hi">%s, 你好</string>
    <string name="login_hi_2">你好, %s</string>
    <string name="login_select_sys">請選擇登入系統</string>
    <string name="logout">登出</string>

    <string name="two_dash">--</string>
    <string name="two_dash_two_value">--/--</string>

    <string name="device_blood_pressure">血壓計(Rossmax X3)</string>
    <string name="device_blood_glucose">血糖儀(Rossmax HT100)</string>
    <string name="device_temperature">額溫槍(Rossmax HC700)</string>
    <string name="device_oxygen">血氧機(Rossmax SB210)</string>
    <string name="device_weight">體脂計(Rossmax LS212B)</string>
    <string name="device_bind">綁定</string>
    <string name="device_unbind">解除綁定</string>
    <string name="device_scan">掃描</string>
    <string name="device_notice">提醒</string>
    <string name="device_request_location_permission_msg">請於取得位置資訊權限選取「同意」，用以使用藍牙設備。</string>
    <string name="device_list_title">新增%s</string>
    <string name="device_scan_title">掃描%s</string>
    <string name="device_description_x3">請按下X3 BT電源開始血壓計， 然後按掃描鍵開始掃描</string>
    <string name="device_description_hc700">請打開設備，並按下掃描。</string>
    <string name="device_description_ht100">請打開設備及插入試紙， 並按下掃描。</string>
    <string name="device_rename_title">自訂名稱</string>
    <string name="device_rename_content">請為您的設備命名：</string>
    <string name="device_detail_title">關於裝置</string>
    <string name="device_detail_brand">品牌</string>
    <string name="device_detail_type">型號</string>

    <string name="dashboard_upload_failed">上傳失敗</string>
    <string name="dashboard_upload_success">上傳成功</string>

    <string name="about_app_version">版本</string>
    <string name="about_app_copyright">Copyright © 2020 viWave ULife Co. Ltd. \nAll Rights Reserved.</string>

    <string name="ok">確定</string>
    <string name="data_not_in_range">%s\n該筆資料不在正常範圍內</string>
    <string name="measure_time">量測時間</string>
</resources>
