<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_temperature"
        android:title="@string/temperature" />
    <item
        android:id="@+id/menu_pulse"
        android:title="@string/pulse" />
    <item
        android:id="@+id/menu_respire"
        android:title="@string/respire" />
    <item
        android:id="@+id/menu_blood_pressure"
        android:title="@string/blood_pressure" />

    <item
        android:id="@+id/menu_blood_glucose"
        android:title="@string/blood_glucose" />
    <item
        android:id="@+id/menu_height"
        android:title="@string/height" />
    <item
        android:id="@+id/menu_weight"
        android:title="@string/weight" />
    <item
        android:id="@+id/menu_oxygen"
        android:title="@string/oxygen" />

</menu>