<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.viwave.collaborationproject.fragments.widgets.ManualInputLayout
        android:id="@+id/manual_glucose"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_24"
        app:manualInputTitle="@string/blood_glucose"
        app:manualInputUnit="@string/unit_blood_glucose"
        app:manualInputEditIme="imeDone"
        app:manualInputEditType="typeNumber"
        app:manualInputImage="@drawable/ic_count_bg"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".9"
        app:layout_constraintVertical_bias=".2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <com.viwave.collaborationproject.fragments.widgets.TabView
        android:id="@+id/view_auto_fit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_toggle"
        android:padding="@dimen/border_width"
        app:autoFitTabFirst="@string/fasting"
        app:autoFitTabSecond="@string/before_meal"
        app:autoFitTabThird="@string/after_meal"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".68"
        app:layout_constraintTop_toBottomOf="@id/manual_glucose"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>