<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.viwave.collaborationproject.fragments.widgets.TabView
        android:id="@+id/pulse_auto_fit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_toggle"
        android:padding="@dimen/border_width"
        app:autoFitTabFirst="@string/day"
        app:autoFitTabSecond="@string/week"
        app:autoFitTabThird="@string/month"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/pulse_chart"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintTop_toBottomOf="@+id/pulse_auto_fit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintDimensionRatio="720:812"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/dp_2">
            <TextView
                android:id="@+id/left_yaxis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/ChartLightText"
                android:text="@string/unit_pulse"
                android:layout_alignParentStart="true"
                />
            <com.viwave.RossmaxConnect.Measurement.chart.JCustomCombinedChart
                android:id="@+id/combine_chart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/left_yaxis"
                android:layout_marginTop="2dp"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/pulse_marker_info"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintTop_toBottomOf="@+id/pulse_chart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintDimensionRatio="720:200"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            >
            <TextView
                android:id="@+id/pulse_marker_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="@dimen/dp_2"
                android:paddingBottom="@dimen/dp_2"
                android:text="@string/two_dash"
                />

            <com.viwave.collaborationproject.fragments.widgets.MarkerInfoLayout
                android:id="@+id/pulse_marker_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                app:markerInfoTitle="@string/pulse"
                app:markerInfoUnit="@string/unit_pulse"
                app:markerInfoValue="@string/two_dash"
                />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>