<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardUseCompatPadding="true"
    app:cardElevation="@dimen/dp_4"
    app:cardCornerRadius="19dp">

    <FrameLayout
        android:id="@+id/border_blood_pressure"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="@dimen/dp_4"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <ImageView
            android:id="@+id/icon_blood_pressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_dashboard_bp"
            android:background="@drawable/bg_rect"
            android:padding="@dimen/dp_16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <com.viwave.collaborationproject.fragments.widgets.MeasurementItemLayout
            android:id="@+id/value_blood_pressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:measureItemTitle="@string/blood_pressure"
            app:measureItemUnit="@string/unit_blood_pressure"
            app:measureItemValue="@string/two_dash_two_value"
            android:layout_marginStart="@dimen/dp_18"
            app:layout_constraintStart_toEndOf="@id/icon_blood_pressure"
            app:layout_constraintEnd_toStartOf="@id/value_blood_pressure_pulse"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <com.viwave.collaborationproject.fragments.widgets.MeasurementItemLayout
            android:id="@+id/value_blood_pressure_pulse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_10"
            app:measureItemTitle="@string/pulse"
            app:measureItemUnit="@string/unit_pulse"
            app:layout_constraintStart_toEndOf="@id/value_blood_pressure"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <TextView
            android:id="@+id/upload_status_blood_pressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_6"
            app:layout_constraintTop_toTopOf="@id/value_blood_pressure"
            app:layout_constraintEnd_toStartOf="@id/add_blood_pressure"
            />

        <ImageView
            android:id="@+id/add_blood_pressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_dashboard_add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>