<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/item_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temperature"
        android:textSize="@dimen/sp_18"
        android:textStyle="bold"
        android:textColor="@color/storm_dust"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/item_value"
        android:layout_width="42dp"
        android:layout_height="wrap_content"
        android:text="@string/two_dash"
        android:textSize="@dimen/sp_18"
        android:textColor="@color/storm_dust"
        android:layout_marginTop="@dimen/dp_4"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/item_unit"
        app:layout_constraintTop_toBottomOf="@id/item_title"
        />

    <TextView
        android:id="@+id/item_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unit_celsius"
        android:textSize="@dimen/sp_14"
        android:textColor="@color/storm_dust"
        android:layout_marginTop="@dimen/dp_4"
        app:layout_constraintStart_toEndOf="@id/item_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/item_title"
        />

</androidx.constraintlayout.widget.ConstraintLayout>