<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) viWave 2020.
  ~ Create by J.Y Yen 10/ 4/ 2020.
  ~ Last modified 4/10/20 1:30 PM
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:src="@drawable/ic_label_fasting"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/dp_2"
        android:text="@string/fasting"
        style="@style/HealthChartLabelText"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/dp_6"
        android:src="@drawable/ic_label_before_meal"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/dp_2"
        android:text="@string/before_meal"
        style="@style/HealthChartLabelText"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/dp_6"
        android:src="@drawable/ic_label_after_meal"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/dp_2"
        android:text="@string/after_meal"
        style="@style/HealthChartLabelText"/>

</LinearLayout>