<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) viWave 2020.
  ~ Create by J.Y Yen 10/ 4/ 2020.
  ~ Last modified 4/10/20 1:30 PM
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:src="@drawable/ic_label_spo2_95"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/dp_2"
        android:text="@string/view_spo2_chart_label_100_95_pct"
        style="@style/HealthChartLabelText"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/dp_6"
        android:src="@drawable/ic_label_spo2_90"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/dp_2"
        android:text="@string/view_spo2_chart_label_94_90_pct"
        style="@style/HealthChartLabelText"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/dp_6"
        android:src="@drawable/ic_label_spo2_below89"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/dp_2"
        android:text="@string/view_spo2_chart_label_89_or_less"
        style="@style/HealthChartLabelText"/>

</LinearLayout>