<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_arrow"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/st_mary"
            android:textSize="@dimen/sp_20"
            />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/dp_24"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".8"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent=".9"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <TextView
            android:id="@+id/login_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/login_nursing"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/login_account"
            />

        <EditText
            android:id="@+id/login_account"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/login_account"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_title"
            app:layout_constraintBottom_toTopOf="@id/login_password"
            />
        <EditText
            android:id="@+id/login_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/login_password"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_account"
            app:layout_constraintBottom_toTopOf="@id/login_error_msg"

            />

        <TextView
            android:id="@+id/login_error_msg"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintWidth_default="wrap"
            app:layout_constraintHeight_default="percent"
            app:layout_constraintHeight_percent=".2"
            app:layout_constraintTop_toBottomOf="@id/login_password"
            app:layout_constraintBottom_toTopOf="@id/btn_login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/login"
            app:layout_constraintWidth_default="wrap"
            app:layout_constraintHeight_default="wrap"
            app:layout_constraintTop_toBottomOf="@id/login_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>